@@ -19,6 +19,10 @@
      If scp -p encounters a pre-epoch timestamp, use the epoch which is
      as close as we can get given that it's used unsigned.  Add a little
      debugging while there.  bz #828, ok djm@
+   - dtucker@cvs.openbsd.org 2008/01/01 09:27:33
+     [sshd_config.5 servconf.c]
+     Allow PermitRootLogin in a Match block.  Allows for, eg, permitting root
+     only from the local network.  ok markus@, man page bit ok jmc@
 
 20071231
  - (dtucker) [configure.ac openbsd-compat/glob.{c,h}] Bug #1407: force use of
@@ -3509,4 +3513,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4814 2008/01/01 09:36:25 dtucker Exp $
+$Id: ChangeLog,v 1.4815 2008/01/01 09:36:56 dtucker Exp $
